2002-05-31  Junichi Uekawa  <dancer@debian.org>

	* Makefile.am: add target to create orig.tar.gz

	* debian/changelog: make it non-native package.

	* Makefile.am: add decaton target

2002-05-04  Junichi Uekawa  <dancer@debian.org>

	* debian/rules: use d-shlibmove instead.
	The implementation seems to be working satisfactory. Great.

2002-05-01  Junichi Uekawa  <dancer@debian.org>

	* debian/changelog: mark for release.

2002-04-21  Junichi Uekawa  <dancer@debian.org>

	* libdshconfig.c (getline): implementation of getline, just enough
	  to get some working done. (checking for HAVE_GETLINE)
	  include config.h.

	* configure.ac: check for getline.

	* debian/rules (binary-arch): remove manpage install, no dsh.1

	* Makefile.am (include_HEADERS): changed entry to include include file.

	* debian/control (Build-Depends): depends on libtool

2002-04-20  Junichi Uekawa  <dancer@debian.org>

	* AUTHORS: created

	* NEWS: empty content.

	* README: created

	* Makefile.am (libdshconfig_la_LDFLAGS): created

	* split out libdshconfig from dsh source
	
2002-03-31  Junichi Uekawa  <dancer@debian.org>

	* libdshconfig.c (free_dshconfig): free the title and data for each item, fix memleak.

2002-03-30  Junichi Uekawa  <dancer@debian.org>

	* libdshconfig.h: added dshconfig_searchdata

	* libdshconfig.c (dshconfig_searchdata): added

2002-03-28  Junichi Uekawa  <dancer@debian.org>

	* libdshconfig.h: added declaration for dshconfig_splitline.

	* libdshconfig.c (dshconfig_splitline): created a new function, so that this piece of code can be re-used.
	(read_oneline): changed to use dshconfig_splitline instead
	(read_oneline): fixing things, so that dancer acpi can use this 
	parser routine instead.

2002-03-18  Junichi Uekawa  <dancer@debian.org>

	* debian/rules: install the libs and other things in the right package

	* libdshconfig.h: added some ifndefs.

	* Makefile (install): added include

	* debian/rules (binary-arch): added dh_makeshlibs
