@@ -1,0 +1,5 @@
+#!/bin/bash
+# autogenerate script
+
+libtoolize -c && aclocal && autoheader && automake --foreign -a -c && autoconf && ./configure
+
